--- a/SChat/MainWindow.xaml
+++ b/SChat/MainWindow.xaml
@@ -7,24 +7,74 @@
         mc:Ignorable="d"
         Title="SChat"
         WindowStartupLocation="CenterScreen"
-        WindowStyle="SingleBorderWindow"
+        WindowStyle="None"
         ResizeMode="NoResize"
         Height="450" 
         Width="800">
-    <Grid Background="DarkGray">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="150*"/>
-            <ColumnDefinition Width="643*"/>
-        </Grid.ColumnDefinitions>
-        <Grid Background="#FFFF0000" 
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="17*"/>
+        </Grid.RowDefinitions>
+        <Border
+            Background="#252525"
+            MouseDown="Border_MouseDown" 
+            Grid.Row="0">
+
+            <Grid HorizontalAlignment="Stretch">
+                <Label Content="SChat"
+                       Foreground="Gray"
+                       FontWeight="SemiBold"/>
+
+                <StackPanel HorizontalAlignment="Right"
+                            Orientation="Horizontal">
+
+                    <Button Width="20" 
+                            Height="20"
+                            Content="—"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Foreground="Gray"
+                            FontWeight="Bold" 
+                            Click="ButtonMininize_Click"/>
+
+                    <Button Visibility="Collapsed"
+                            Width="20" Height="20"
+                            Content="☐"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Foreground="Gray"
+                            FontWeight="Bold"
+                            Click="WindowStateButton_Click"/>
+
+
+                    <Button Width="20" Height="20"
+                            Content="X"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Foreground="Gray"
+                            FontWeight="Bold"
+                            Click="CloseButton_Click"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150*"/>
+                <ColumnDefinition Width="643*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Background="#292b2f" 
               Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="369*"/>
-                <RowDefinition Height="50*"/>
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0">
-                <ListBox Name="ChatListBox" 
-                             Background="LightGray"
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="369*"/>
+                    <RowDefinition Height="50*"/>
+                </Grid.RowDefinitions>
+                <Grid Grid.Row="0">
+                    <ListBox Name="ChatListBox" 
+                             Background="#2F3136"
+                             BorderBrush="#2F3136"
                              ScrollViewer.VerticalScrollBarVisibility="Hidden">
                         <Grid Height="40" Visibility="Visible" 
                               Width="135"
@@ -42,90 +92,120 @@
                                 FontWeight="Bold"
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
+                                Foreground="White"
                                 FontSize="10"
                                 Width="90"/>
                                 <Label
                                 Content="Some text..."
                                 HorizontalAlignment="Left"
                                 VerticalAlignment="Bottom"
+                                Foreground="White"
                                 FontSize="10" 
                                 Width="90"/>
                             </Grid>
-                            <Border
-                            BorderBrush="Black"
-                            BorderThickness="1.3"/>
+                            <Grid Height="40" Visibility="Visible" 
+                              Width="135"
+                              HorizontalAlignment="Center">
+                            <Image
+                              Margin="5,0,0,0"
+                              HorizontalAlignment="Left"
+                              Width="30"
+                              Height="30"
+                              Source="Resources/StandartProfile.png">
+                            </Image>
+                                <Grid Margin="40,0,0,0">
+                                    <Label
+                                Content="ChatName"
+                                FontWeight="Bold"
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Top"
+                                Foreground="White"
+                                FontSize="10"
+                                Width="90"/>
+                                    <Label
+                                Content="Some text..."
+                                HorizontalAlignment="Left"
+                                VerticalAlignment="Bottom"
+                                Foreground="White"
+                                FontSize="10" 
+                                Width="90"/>
+                                </Grid>
+                            </Grid>
                         </Grid>
                     </ListBox>
                     <StackPanel Orientation="Vertical"
                             VerticalAlignment="Bottom">
-                    <StackPanel Name="AddNewStackPanel"
+                        <StackPanel Name="AddNewStackPanel"
                                 Orientation="Horizontal"
                                 Visibility="Collapsed">
-                        <TextBox Name="ChatAddNameOfChat"
+                            <TextBox Name="ChatAddNameOfChat"
                                  FontSize="16"
                                  Height="30"
                                  Width="120"
                                  HorizontalAlignment="Left">
-                        </TextBox>
-                        <Button Height="30"
+                            </TextBox>
+                            <Button Height="30"
                                 Width="30"
                                 HorizontalAlignment="Right"
                                 Click="AddNewChatClose">
-                            <Image Source="Resources/Add.png"
+                                <Image Source="Resources/Add.png"
                                    Margin="5">
-                            </Image>
-                        </Button>
-                    </StackPanel>
-                    <Button Name="AddNewChatButton"
-                            Visibility="Visible"
+                                </Image>
+                            </Button>
+                        </StackPanel>
+                        <Button 
+                            Name="AddNewChatButton"
+                            Visibility="Collapsed"
                             Content="Добавить новый чат"
                             Height="30"
                             Click="AddNewChat">
-                    </Button>
-                </StackPanel>
-            </Grid>
-            <Grid Grid.Row="1">
-                <Image Name="ProfileImage"
+                        </Button>
+                    </StackPanel>
+                </Grid>
+                <Grid Grid.Row="1">
+                    <Image Name="ProfileImage"
                        Margin="5,0,0,0"
                        HorizontalAlignment="Left"
                        Width="30"
                        Height="30"
                        Source="Resources/StandartProfile.png">
-                </Image>
-                <Grid Margin="40,0,0,0" 
+                    </Image>
+                    <Grid Margin="40,0,0,0" 
                       MouseDown="Profile_MouseDown">
-                    <Label Name="ProfileName"
-                           Content="Name"
-                           FontWeight="Bold"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Top"
-                           FontSize="10" 
-                           Width="75" 
-                           Height="25"/>
-                    <Label Name="ProfileStatus"
-                           Content="Status"
-                           HorizontalAlignment="Left"
-                           VerticalAlignment="Bottom"
-                           FontSize="10" 
-                           Width="75" 
-                           Height="25" 
-                           Margin="0,0,0,3"/>
-                    <Image Source="Resources/Setting.png"
+                        <Label Name="ProfileName"
+                               Content="Name"
+                               FontWeight="Bold"
+                               Foreground="White"
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Top"
+                               Margin="0,3,0,0"
+                               FontSize="10" 
+                               Width="75" 
+                               Height="25"/>
+                        <Label Name="ProfileStatus"
+                               Foreground="White"
+                               Content="I want pizza today..."
+                               HorizontalAlignment="Left"
+                               VerticalAlignment="Bottom"
+                               FontSize="10" 
+                               Width="75" 
+                               Height="25" 
+                               Margin="0,0,0,3"/>
+                        <Image Source="Resources/Setting.png"
                            Width="25" 
                            Height="25" 
                            VerticalAlignment="Center"
                            HorizontalAlignment="Right"
                            Margin="0,0,5,0"/>
+                    </Grid>
                 </Grid>
-                <Border
-                    BorderBrush="Black"
-                    BorderThickness="1"
-                    VerticalAlignment="Top"/>
+            </Grid>
+            <Grid Grid.Column="1">
+                <Frame Name="MainFrame"
+                   NavigationUIVisibility="Hidden"
+                   Background="#36393F"/>
             </Grid>
         </Grid>
-        <Grid Grid.Column="1">
-            <Frame Name="MainFrame"
-                   NavigationUIVisibility="Hidden"/>
-        </Grid>
     </Grid>
+
 </Window>
