--- a/SChat/Styles/Style.xaml
+++ b/SChat/Styles/Style.xaml
@@ -1,10 +1,32 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     x:Class="SChat.Style">
-    <LinearGradientBrush x:Key="BackGround">
+
+
+    <LinearGradientBrush x:Key="TextColor">
         <GradientStopCollection>
-            <GradientStop Color="White" Offset="0" />
-            <GradientStop Color="Blue" Offset="1" />
+            <GradientStop Color="White" Offset="0"/> 
         </GradientStopCollection>
     </LinearGradientBrush>
+    
+    
+    <Style TargetType="Button">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Name="Border" 
+                            CornerRadius="15"
+                            Background="#33363C"
+                            BorderBrush="Black" 
+                            MouseEnter="MouseEnter" 
+                            MouseLeave="MouseLeave">
+                        <ContentPresenter HorizontalAlignment="Center" 
+                                          VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Foreground" Value="White"/>
+    </Style>
+
 </ResourceDictionary>
