--- a/SChat/TempPage.xaml
+++ b/SChat/TempPage.xaml
@@ -1,15 +1,14 @@
-﻿<Page x:Class="SChat.ChatSettingsPage"
+﻿<Page x:Class="SChat.TempPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:SChat"
       mc:Ignorable="d" 
-      d:DesignHeight="421"
-      d:DesignWidth="634"
-      Title="ChatSettingsPage">
+      d:DesignHeight="450" d:DesignWidth="800"
+      Title="TempPage">
 
-    <Grid Background="AliceBlue">
+    <Grid>
         
     </Grid>
 </Page>
