--- a/SChat/LoginWindow.xaml
+++ b/SChat/LoginWindow.xaml
@@ -10,20 +10,70 @@
         WindowStartupLocation="CenterScreen"
         Height="350" 
         Width="600"
-        Title="Окно входа">
-    <Grid Background="#32353B">
-        <Grid Margin="30,20,30,20"
+        Title="Окно входа"
+        WindowStyle="None">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition Height="13*"/>
+        </Grid.RowDefinitions>
+        <Border
+            Background="#252525"
+            MouseDown="Border_MouseDown" 
+            Grid.Row="0">
+
+            <Grid HorizontalAlignment="Stretch">
+                <Label Content="SChat"
+                       Foreground="Gray"
+                       FontWeight="SemiBold"/>
+
+                <StackPanel HorizontalAlignment="Right"
+                            Orientation="Horizontal">
+
+                    <Button Width="20" 
+                            Height="20"
+                            Content="—"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Foreground="Gray"
+                            FontWeight="Bold" 
+                            Click="ButtonMininize_Click"/>
+
+                    <Button Visibility="Collapsed"
+                            Width="20" Height="20"
+                            Content="☐"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Foreground="Gray"
+                            FontWeight="Bold"
+                            Click="WindowStateButton_Click"/>
+
+
+                    <Button Width="20" Height="20"
+                            Content="X"
+                            Background="Transparent"
+                            BorderThickness="0"
+                            Foreground="Gray"
+                            FontWeight="Bold"
+                            Click="CloseButton_Click"/>
+                </StackPanel>
+            </Grid>
+        </Border>
+
+
+        <Grid Background="#32353B" Grid.Row="1">
+            <Grid Margin="30,20,30,20"
               Background="#2F3136">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="208*"/>
-                <RowDefinition Height="73*"/>
-            </Grid.RowDefinitions>
-            <StackPanel
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="208*"/>
+                    <RowDefinition Height="73*"/>
+                </Grid.RowDefinitions>
+                <StackPanel
             Grid.Row="0"
             Orientation="Vertical"
             VerticalAlignment="Center"
             HorizontalAlignment="Center" Margin="147,40,147,8" Height="160" Width="240">
-                <Label 
+                    <Label 
             Content="Логин:" 
             Foreground="{StaticResource TextColor}"
             HorizontalAlignment="Left" 
@@ -31,35 +81,38 @@
             Height="40" 
             Width="240"
             FontSize="20"/>
-                <TextBox 
-            Name="LogBox" 
-            HorizontalAlignment="Left" 
-            TextWrapping="Wrap" 
-            VerticalAlignment="Top" 
-            Height="40" 
-            Width="240"
-            FontSize="20"/>
-                <Label 
-            Content="Пароль:"
-            Foreground="{StaticResource TextColor}"
-            HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            Height="40" 
-            Width="240"
-            FontSize="20"/>
-                <PasswordBox 
-            Name="PassBox" 
-            HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            Height="40" 
-            Width="240"
-            FontSize="20"/>
-            </StackPanel>
-            <StackPanel Grid.Row="1"
+                    <TextBox Name="LogBox" 
+                             Background="#323338"
+                             Foreground="{StaticResource TextColor}"
+                             BorderBrush="Black"
+                             HorizontalAlignment="Left" 
+                             TextWrapping="Wrap" 
+                             VerticalAlignment="Top" 
+                             Height="40" 
+                             Width="240"
+                             FontSize="20"/>
+                    <Label Content="Пароль:"
+                           Foreground="{StaticResource TextColor}"
+                           HorizontalAlignment="Left" 
+                           VerticalAlignment="Top" 
+                           Height="40" 
+                           Width="240"
+                           FontSize="20"/>
+                    <PasswordBox Name="PassBox"
+                                 Background="#323338"
+                                 Foreground="{StaticResource TextColor}"
+                                 BorderBrush="Black"
+                                 HorizontalAlignment="Left" 
+                                 VerticalAlignment="Top" 
+                                 Height="40" 
+                                 Width="240"
+                                 FontSize="20"/>
+                </StackPanel>
+                <StackPanel Grid.Row="1"
                         Orientation="Horizontal"
                         HorizontalAlignment="Center"
                         VerticalAlignment="Center">
-                <Button 
+                    <Button 
             x:Name="RegButton" 
             Content="Регистрация"
             Height="40" 
@@ -67,16 +120,18 @@
             Margin="0,0,30,0"
             FontSize="20"
             Click="RegButton_Click"/>
-                <Button 
+                    <Button 
             x:Name="LogButton" 
             Content="Вход"
             Height="40" 
             Width="150"
             FontSize="20"
             Click="LogButton_Click">
-                </Button>
-            </StackPanel>
-        </Grid>
+                    </Button>
+                </StackPanel>
+            </Grid>
 
+
+        </Grid>
     </Grid>
 </Window>
