--- a/SChat/ChatSettingsPage.xaml
+++ b/SChat/ChatSettingsPage.xaml
@@ -26,7 +26,7 @@
                        Width="80"
                        Height="80"
                        Source="Resources/StandartChat.png"
-                       MouseDown="ChangeImageProfile_MouseDown">
+                       MouseDown="ChangeImageChat_MouseDown">
                 </Image>
                 <TextBox Name="ChatNameLabel"
                          Text="Name"
@@ -45,30 +45,78 @@
                      Background="#FF44464D"
                      BorderBrush="#FF44464D"
                      ScrollViewer.VerticalScrollBarVisibility="Hidden">
-                <Grid Height="50">
+                
+                <Grid Height="50"
+                      Width="200"
+                      HorizontalAlignment="Center"
+                      Margin="5,7,5,7">
                     <Image HorizontalAlignment="Left"
                            Source="Resources/StandartProfile.png"
                            Width="40"
                            Height="40"
                            Margin="5">
-
                     </Image>
                     <StackPanel Orientation="Vertical"
                                 Margin="50,0,0,0">
-                        <Label Name="UserNameLabel"
-                               VerticalAlignment="Top"
+                        <Label VerticalAlignment="Top"
                                Content="Name"
                                FontWeight="Bold"
                                Foreground="{StaticResource TextColor}">
                         </Label>
-                        <Label Name="StatusLabel"
-                               VerticalAlignment="Bottom"
+                        <Label VerticalAlignment="Bottom"
                                Content="Status"
                                Foreground="{StaticResource TextColor}">
                             
                         </Label>
                     </StackPanel>
                 </Grid>
+                <Grid Height="50" 
+                      VerticalAlignment="Center"
+                      Margin="5,7,5,7">
+                    <Image HorizontalAlignment="Left"
+                           Source="Resources/StandartProfile.png"
+                           Width="40"
+                           Height="40"
+                           Margin="5">
+                    </Image>
+                    <StackPanel Orientation="Vertical"
+                                Margin="50,0,0,0">
+                        <Label VerticalAlignment="Top"
+                               Content="Name"
+                               FontWeight="Bold"
+                               Foreground="{StaticResource TextColor}">
+                        </Label>
+                        <Label VerticalAlignment="Bottom"
+                               Content="Status"
+                               Foreground="{StaticResource TextColor}">
+
+                        </Label>
+                    </StackPanel>
+                </Grid>
+                <Grid Height="50" 
+                      VerticalAlignment="Center"
+                      Margin="5,7,5,7">
+                    <Image HorizontalAlignment="Left"
+                           Source="Resources/StandartProfile.png"
+                           Width="40"
+                           Height="40"
+                           Margin="5">
+                    </Image>
+                    <StackPanel Orientation="Vertical"
+                                Margin="50,0,0,0">
+                        <Label VerticalAlignment="Top"
+                               Content="Name"
+                               FontWeight="Bold"
+                               Foreground="{StaticResource TextColor}">
+                        </Label>
+                        <Label VerticalAlignment="Bottom"
+                               Content="Status"
+                               Foreground="{StaticResource TextColor}">
+
+                        </Label>
+                    </StackPanel>
+                </Grid>
+
             </ListBox>
         </Grid>
     </Grid>
