--- a/SChat/MainWindow.xaml
+++ b/SChat/MainWindow.xaml
@@ -135,15 +135,23 @@
                         <Grid Height="40" Visibility="Visible"
                               Width="135"
                               Margin="0,2,0,2">
-                            <Button HorizontalAlignment="Center"
-                                    VerticalAlignment="Center"
-                                    Width="30"
+                            <StackPanel Orientation="Horizontal"
+                                        HorizontalAlignment="Center"
+                                        VerticalAlignment="Center">
+                                <Button Width="30"
                                     Height="30"
                                     Content="+"
                                     FontSize="16"
                                     FontWeight="Black"
                                     Click="AddNewChat">
-                            </Button>
+                                </Button>
+                                
+                                <Button Width="30"
+                                    Height="30"
+                                    Click="UpdateChat">
+                                    <Image Margin="5" Source="Resources/refresh.png"></Image>
+                                </Button>
+                            </StackPanel>
                         </Grid>
                     </ListBox>
                     <StackPanel Orientation="Vertical"
@@ -163,7 +171,8 @@
                             <Button Height="30"
                                 Width="30"
                                 HorizontalAlignment="Right"
-                                Click="AddNewChatClose">
+                                Click="AddNewChatClose"
+                                IsDefault="True">
                                 <Image Source="Resources/Add.png"
                                    Margin="5">
                                 </Image>
