--- a/SChat/ChatPage.xaml
+++ b/SChat/ChatPage.xaml
@@ -3,12 +3,15 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:math="http://hexinnovation.com/math"
       xmlns:local="clr-namespace:SChat"
       mc:Ignorable="d" 
       d:DesignHeight="421"
       d:DesignWidth="634"
       Title="ChatPage">
-
+    <Page.Resources>
+        <math:MathConverter x:Key="math"/>
+    </Page.Resources>
     <Grid Background="#32353B">
         <Grid.RowDefinitions>
             <RowDefinition Height="32*"/>
@@ -34,16 +37,57 @@
                     <Image Source="Resources\Logout.png"></Image>
                 </Button>
             </StackPanel>
-                
         </Grid>
 
         <Grid Grid.Row="1">
-            <ListBox Name="MessageListBox" 
-                     Background="#32353B"
-                     BorderBrush="#32353B">
-                <ScrollViewer Name="scroll"
-                              VerticalScrollBarVisibility="Visible">
-                </ScrollViewer>
+            <ListBox Name="MessageListBox"
+                Background="#32353B"
+                     BorderBrush="#32353B"
+                     ItemsSource="{Binding MessagesList}"
+                     ScrollViewer.VerticalScrollBarVisibility="Visible">
+                <ListBox.ItemTemplate>
+                    <DataTemplate>
+                        <Border Width="{Binding Path=ActualWidth, Mode=OneWay, ElementName=MessageListBox, Converter={StaticResource math}, ConverterParameter=x-25}"
+                                CornerRadius="10"
+                                Background="#FF40444B"
+                                Height="45"
+                                Margin="0,5,0,5">
+                            <Grid>
+                                <StackPanel Orientation="Horizontal">
+                                    <Image Width="35"
+                                           Height="35"
+                                           Margin="5"
+                                           HorizontalAlignment="Left"
+                                           Source="{Binding Image}">
+                                    </Image>
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="*"/>
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
+                                        <StackPanel Orientation="Horizontal">
+                                            <Label Content="{Binding User.NickName}"
+                                               Foreground="White"
+                                               FontWeight="Bold">
+                                            </Label>
+                                            <Label Content="{Binding Date}"
+                                                   Foreground="White">
+                                            </Label>
+                                        </StackPanel>
+                                        <Label Content="{Binding Content}"
+                                               Foreground="White">
+                                        </Label>
+                                    </Grid>
+                                </StackPanel>
+                                <Button Width="30" Height="30"
+                                        Margin="0,0,5,0"
+                                        Content="✕"
+                                        HorizontalAlignment="Right">
+                                </Button>
+                            </Grid>
+                        </Border>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
             </ListBox>
         </Grid>
 
